优化部署，清理冗余代码

--- a/myapp/example/pipeline/sdk/llm.ipynb
+++ b/myapp/example/pipeline/sdk/llm.ipynb
@@ -77,7 +77,7 @@
     "    model_name='chatglm3-6b',\n",
     "    model_version='v202300801',\n",
     "    model_path='/mnt/admin/pipeline/example/sdk/chatglm/chatglm3-6b',\n",
-    "    images='ccr.ccs.tencentyun.com/cube-studio/llm-server:20240601',\n",
+    "    images='vllm/vllm-openai:v0.8.5.post1',\n",
     "    resource_memory='20G',\n",
     "    host=\"/v1/models\",\n",
     "    resource_cpu='10',\n",
